--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,28 @@
 
 <body>
   <p class="w3-left w3-button w3-white">Rob Portfolio<p>
+    <h2>I am</h2>
+      <ul>
+        <li>Sexy<li>
+        <li>html pro<li>
+      </ul>
+  <table style="width:100%"
+  border=1>
+    <tr>
+      <td>Names</td>
+      <td>Coolness 1-10</td>
+      <td>Can I table?</td>
+    </tr>
+    <tr>
+      <td>Robbie</td>
+      <td>10</td>
+      <td>Yes</td>
+    </tr>
+  </table>
 </body>
 
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="footer">
 </footer>
- 
+
 </html>
