--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-xlarge w3-padding-24">
+  <nav> </nav>
   <h1 class="w3-left w3-button w3-white">Rob Portfolio</h1>
 </header>
 
