--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,10 @@
   <h3>This is where a link goes</h3>
   <a href="http://"www.facebook.com/photo.php?fbid=2189409812150&set=t.663760222&type=3&theater"
     Hey Sam
-  </a> 
+  </a>
+  <h4>Even More Stuff</h4>
+  <img src=
+  style="width:100" />
 </body>
 
 <!-- Footer / About Section -->
