--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,12 @@
   "https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
   style="width:100" />
 </body>
-
+<form>
+  <p>Name</p>
+  <input type="text"
+  name="state"
+  placeholder="your name?" />
+</form>
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="footer">
 </footer>
