--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,12 @@
         <li>Sexy</li>
         <li>html pro</li>
       </ul>
+<p>
+  <span style="color:blue"
+    I am m blue da ba dee da ba daa Da ba dee da ba daa
+  </span>
+  For real
+</p>
   <table style="width:100%"
   border=1>
     <tr>
@@ -31,12 +37,10 @@
     </tr>
   </table>
   <h3>This is where a link goes</h3>
-  <a href="http://"www.facebook.com/photo.php?fbid=2189409812150&set=t.663760222&type=3&theater"
     Hey Sam
   </a>
   <h4>Even More Stuff</h4>
-  <img src=
-  "https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
+  <img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
   style="width:100" />
 </body>
 <form>
