--- a/Index.html
+++ b/Index.html
@@ -37,6 +37,7 @@
     </tr>
   </table>
   <h3>This is where a link goes</h3>
+  <a href="http://www.google.co.uk"
     Hey Sam
   </a>
   <h4>Even More Stuff</h4>
