--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
         <li>html pro</li>
       </ul>
 <p>
-  <span style="color:blue"
+  <span style="color:blue">
     I am m blue da ba dee da ba daa Da ba dee da ba daa
   </span>
   For real
