--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,14 @@
         <li>Sexy</li>
         <li>html pro</li>
       </ul>
+  <p> I can also do an ordered list, here it is:
+    <ol>
+      <li>This is one</li>
+      <li>Here's another</li>
+      <li>Are we done yet?</li>
+    </ol>
+  </p>
+
 <p>
   <span style="color:blue">
     I am m blue da ba dee da ba daa Da ba dee da ba daa
@@ -37,12 +45,17 @@
     </tr>
   </table>
   <h3>This is where a link goes</h3>
-  <a href="http://www.google.co.uk"
+  <a href="http://www.google.co.uk">
     Hey Sam
   </a>
   <h4>Even More Stuff</h4>
   <img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
   style="width:100" />
+  <h5>Look, A blue box!</h5>
+<div style="width:50px;
+height:50px;
+background-color:blue;">
+</div>
 </body>
 <form>
   <p>Name</p>
