--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <li>Sexy</li>
         <li>html pro</li>
       </ul>
-  <p> I can also do an ordered list, here it is:
+  <p>I can also do an ordered list, here it is:
     <ol>
       <li>This is one</li>
       <li>Here's another</li>
@@ -45,7 +45,8 @@
     </tr>
   </table>
   <h3>This is where a link goes</h3>
-  <a href="http://www.google.co.uk">
+  <a href="http://www.google.co.uk"
+  target="_blank">
     Hey Sam
   </a>
   <h4>Even More Stuff</h4>
