Made the image a link
Made image a link via wrapping, added alt text

--- a/Index.html
+++ b/Index.html
@@ -50,8 +50,10 @@
     Hey Sam
   </a>
   <h4>Even More Stuff</h4>
-  <img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
-  style="width:100" />
+  <a href="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
+  target="_blank"><img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
+  alt="That Old Picture"
+  style="width:100" /></a>
   <h5>Look, A blue box!</h5>
 <div style="width:50px;
 height:50px;
