SR2_addbody style

--- a/Index.html
+++ b/Index.html
@@ -1,73 +1,48 @@
 <!DOCTYPE html>
+<!-- this is a <div> but i just called it html. it is a container that
+contains the whole page -->
 <html>
+
+
+<!-- this is a <div> but i just called it head. it is a container that
+contains the website details that dont have any display purpose, examples
+include title for the tab -->
+<head>
 <title>Rob Portfolio</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel = "stylesheet" type = "text/css" href = "Styles/Style.css" />
+</head>
 
-<!-- Header -->
-<header class="w3-container w3-xlarge w3-padding-24">
-  <h1 class="w3-left w3-button w3-white">Rob Portfolio</h1>
+<header class="navigation-bar">
+  <ul>
+   <li><a href="index.html">Home</a></li>
+   <li><a href="pages/news.html">News</a></li>
+   <li><a href="pages/contact.html">Contact</a></li>
+   <li><a href="pages/about.html">About</a></li>
+ </ul> 
 </header>
 
-<body>
-  <p class="w3-left w3-button w3-white">Rob Portfolio<p>
-    <h2>I am</h2>
-      <ul>
-        <li>Sexy</li>
-        <li>html pro</li>
-      </ul>
-  <p>I can also do an ordered list, here it is:
-    <ol>
-      <li>This is one</li>
-      <li>Here's another</li>
-      <li>Are we done yet?</li>
-    </ol>
-  </p>
-
-<p>
-  <span style="color:blue">
-    I am m blue da ba dee da ba daa Da ba dee da ba daa
-  </span>
-  For real
-</p>
-  <table style="width:100%"
-  border=1>
-    <tr>
-      <td>Names</td>
-      <td>Coolness 1-10</td>
-      <td>Can I table?</td>
-    </tr>
-    <tr>
-      <td>Robbie</td>
-      <td>10</td>
-      <td>Yes</td>
-    </tr>
-  </table>
-  <h3>This is where a link goes</h3>
-  <a href="http://www.google.co.uk"
-  target="_blank">
-    Hey Sam
-  </a>
-  <h4>Even More Stuff</h4>
-  <a href="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
-  target="_blank"><img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-9/264891_2174913049740_4104147_n.jpg?oh=60ffb6116cb82d0568c9d1bcd17fd4f0&oe=59511C5C"
-  alt="That Old Picture"
-  style="width:100" /></a>
-  <h5>Look, A blue box!</h5>
-<div style="width:50px;
-height:50px;
-background-color:blue;">
+<div class="hero-image">
+<img border="0" alt="hero image" src="images/hero.jpeg">
+ <div class="hero-text">
+   <h1>My name is Rob</h1>
+   <p>I am a developer</p>
+ </div>
 </div>
-</body>
-<form>
-  <p>Name</p>
-  <input type="text"
-  name="state"
-  placeholder="your name?" />
-</form>
+
+<body>    
+<!-- Rob insert code here -->
+<div class="content">
+  <h1> Home page </h1>
+  <p1> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p1>
+</div>
+
+</body>  
+
 <!-- Footer / About Section -->
-<footer class="w3-light-grey w3-padding-64 w3-center" id="footer">
+<footer class"footer">
+<p> copyright 2017</p>
 </footer>
 
 </html>
